--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div id="container">
             
             <div id="heading">
-            <h1>Which Avatar the last Airbender character are you?</h1>
+            <h1>Which Avatar the Last Airbender character are you?</h1>
             </div>
             
             <h2 id="question"><strong>Question 1: What kind of bender would you want to be?</strong></h2>
